--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,7 +22,7 @@ p {
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: start
+  justify-content: flex-start
 }
 
 .block {
